# bagel-rs-redux

./: .gitignore  CLAUDE.md  Cargo.toml  GRAMMAR.md  README.md  bagel.json  grammar_regen.sh  install-extension.sh
lib/: html.bgl
src/: config.rs  lib.rs  lsp.rs  main.rs  utils.rs
src/ast/: container.rs  grammar.rs  mod.rs  modules.rs  slice.rs
src/check/: check.rs  mod.rs
src/compile/: bundle.rs  compile.rs  mod.rs
src/emit/: emit.rs  mod.rs
src/parse/: mod.rs  parse.rs  precedence.rs  utils.rs
src/types/: fits.rs  infer.rs  mod.rs  normalize.rs  types.rs
tests/: binary_op_test.rs  check.rs  compile.rs  emit.rs  find_node_at_offset.rs  new_features_test.rs  parse.rs  parser_test.rs  slice_debug.rs  types.rs
tests/common/: mod.rs  samples.rs
tests/snapshots/: check__arithmetic.snap  check__bad_syntax.snap  check__blank_lines.snap  check__check.snap  check__collections.snap  check__comments.snap  check__comparison_and_logic.snap  check__declarations.snap  check__function_types.snap  check__functions.snap  check__generics.snap  check__generics.snap.new  check__if_else.snap  check__imports.snap  check__imports.snap.new  check__invocations.snap  check__literals.snap  check__markup.snap  check__named_type_errors.snap  check__named_types.snap  check__pipe_call.snap  check__property_access.snap  check__return_statement.snap  check__tuple_type_errors.snap  check__tuple_types.snap  check__type_annotations.snap  check__type_errors.snap  (+129 more)
type_hierarchy/: Cargo.toml
vscode-extension/: bagel.schema.json  bar.bgl  foo.bgl  package-lock.json  package.json
(+3 files in other folders)
