[package]
name = "bagel-language-server"
version = "0.1.0"
edition = "2021"

[lib]                                                                            
path = "src/main.rs" 

[dependencies]
type_hierarchy = { path = "type_hierarchy" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0"
salsa = "0.25.2"
nom = "7"
memoize = "0.6.0"
insta = "1.46.1"
