[package]
name = "bagel"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bagel"
path = "src/bin/main.rs"

[[bin]]
name = "generate-schema"
path = "src/bin/generate_schema.rs"

[dependencies]
type_hierarchy = { path = "type_hierarchy" }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0"
schemars = "0.8"
salsa = "0.25.2"
nom = "7"
memoize = "0.6.0"
insta = "1.46.1"
reqwest = "0.13.1"
